Add a user model

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "alembic>=1.17.2",
     "fastapi[all]>=0.127.0",
     "httpx>=0.28.1",
     "ptpython>=3.0.32",
     "scalar-fastapi>=1.5.0",
+    "sqlmodel>=0.0.28",
 ]
