Add db_session for db interactions/queries

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "alembic>=1.17.2",
+    "asyncpg>=0.31.0",
     "fastapi[all]>=0.127.0",
     "httpx>=0.28.1",
     "ptpython>=3.0.32",
